fixed server error banner going out of bounds of sign up forms

--- a/application/frontend/src/components/InfoMessages/ServerErrorMessage.module.css
+++ b/application/frontend/src/components/InfoMessages/ServerErrorMessage.module.css
@@ -5,4 +5,5 @@
   color: var(--color-text-inverted);
   font-size: var(--h5);
   padding: 0.25rem 1rem;
+  border-radius: 0 0 7.5px 7.5px;
 }
